src/test/deca/context/invalid/class21.deca
class A{
    int a;
} 
{
    int a=new A();
    
}